--- a/Chart_in_Core/Chart_in_Core/wwwroot/SiteTemplate/assets/css/Flowchart.css
+++ b/Chart_in_Core/Chart_in_Core/wwwroot/SiteTemplate/assets/css/Flowchart.css
@@ -111,32 +111,34 @@
 }
 
 .flowcharttooltip .tooltiptext {
-    visibility: hidden;
-    width: 350px;
-    background-color: rgb(250, 247, 247);
-    color: rgb(34, 26, 26);
-    text-align: right;
-    font-size:smaller;
-    border-radius: 6px;
-    padding: 5px 0;
-    /* Position the tooltip */
-    position: absolute;
-    z-index: 1;
-    top: 120%;
-    left: 45%;
-    margin-left: -60px;
-  }
+        direction: rtl;
+        visibility: hidden;
+        width: 350px;
+        background-color: rgb(250, 247, 247);
+        color: rgb(34, 26, 26);
+        text-align: right;
+        font-size: smaller;
+        border-radius: 6px;
+        padding: 5px 0;
+        /* Position the tooltip */
+        position: absolute;
+        z-index: 1;
+        top: 120%;
+        left: 45%;
+        margin-left: -60px;
+    }
 
 .flowcharttooltip .tooltiptext::after {
-    content: "";
-    position: absolute;
-    bottom: 100%;
-    left: 20%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: transparent transparent rgb(255, 254, 254) transparent;
-}
+        direction: rtl;
+        content: "";
+        position: absolute;
+        bottom: 100%;
+        left: 20%;
+        margin-left: -5px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: transparent transparent rgb(255, 254, 254) transparent;
+    }
 
 .flowcharttooltip:hover .tooltiptext {
     visibility: visible;
