--- a/Chart_in_Core/Chart_in_Core/Views/Home/Flowchart2.cshtml
+++ b/Chart_in_Core/Chart_in_Core/Views/Home/Flowchart2.cshtml
@@ -12,12 +12,12 @@
         </span>
         <div class="branch ">
             <div class="entry sole">
-                <span style="background-color: green;" class="flowcahrt_label" id="spn_asnad">
+                <span style="background-color: gray;" class="flowcahrt_label" id="spn_asnad">
                     درخواست اسناد و مدارک
                 </span>
                 <div class="branch ">
                     <div class="entry sole">
-                        <span id="spn_tashkhis_label" class="flowcahrt_label">
+                        <span id="spn_tashkhis_label" style="background-color: gray;" class="flowcahrt_label">
                             <span class="flowcharttooltip">
                                 <span class="tooltiptext" id="spn_tashkhis">
 
